--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         place-content: center;
         color: white;
         position: relative;
+        z-index: 100;
       }
       .tooloption:hover {
         background-color: rgb(85, 85, 85);
