--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         margin: 0;
         --white: white;
         --bg: rgb(47, 47, 47);
+        --theme: rgb(0, 170, 255);
         background-color: var(--bg);
         font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
           sans-serif;
@@ -93,6 +94,7 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
+        z-index: 100;
       }
       .toolmenu::-webkit-scrollbar {
         width: 0;
@@ -123,20 +125,19 @@
         border-radius: 10px;
         cursor: pointer;
         background-color: rgb(66, 66, 66);
-        display: grid;
-        place-content: center;
+        display: flex;
+        align-items: center;
+        gap: 10px;
         color: white;
         position: relative;
-        z-index: 100;
       }
       .tooloption:hover {
         background-color: rgb(85, 85, 85);
       }
-      .savebutton {
-        margin-top: auto;
-      }
-      .savebutton:hover {
-        background-color: rgb(1, 201, 1);
+      .tooloption img {
+        height: 50%;
+        aspect-ratio: 1;
+        margin-left: 30px;
       }
       .imagetool input {
         cursor: pointer;
@@ -147,6 +148,13 @@
         height: 100%;
         width: 100%;
         opacity: 0;
+      }
+      .savebutton {
+        margin-top: auto;
+        display: flex;
+      }
+      .savebutton:hover {
+        background-color: rgb(1, 201, 1);
       }
       /*  */
       .selectMenu {
@@ -270,6 +278,7 @@
         border-radius: 100px;
         padding: 5px 0px;
         box-sizing: border-box;
+        user-select: none;
       }
       .fontfamilies:hover {
         background-color: rgb(85, 85, 85);
@@ -389,15 +398,90 @@
     <!-- mobile view -->
     <style>
       @media (width<450px) {
+        * {
+          -webkit-tap-highlight-color: transparent;
+        }
+        html {
+          overflow: hidden;
+        }
         body {
           display: flex;
           justify-content: center;
-          align-items: center;
           min-height: 100dvh;
+          overflow: hidden;
+        }
+        main {
+          width: 100%;
+          height: calc(100vh - 120px);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 60px;
         }
         .preview {
-          width: 97%;
+          width: unset;
+          height: 100%;
           border-radius: 10px;
+        }
+        .toolmenu {
+          height: 60px;
+          width: 100vw;
+          top: unset;
+          flex-direction: row;
+          align-items: center;
+          bottom: 0;
+          z-index: 200;
+          border-radius: 25px 25px 0px 0px;
+          border-top: 1px solid white;
+          padding: 0 10px;
+        }
+        .toolmenuInOutButton {
+          display: none;
+        }
+        .tooloption {
+          flex-direction: column;
+          font-size: 12px;
+          justify-content: center;
+          align-items: center;
+          gap: 0;
+          height: 100%;
+          background-color: transparent;
+          user-select: none;
+        }
+        .tooloption:hover {
+          background-color: transparent;
+        }
+        /*  */
+        .tooloption:hover p {
+          line-height: 5px;
+          color: var(--theme);
+        }
+        .tooloption p {
+          transition: 0.2s;
+          opacity: 1;
+          line-height: 0px;
+        }
+        .tooloption img {
+          margin-left: 0px;
+          height: 20px;
+        }
+        .savebutton {
+          margin-top: 0;
+        }
+        .savebutton:hover {
+          background-color: transparent;
+        }
+        /*  */
+        .selectMenuInOutButton {
+          top: 10px;
+          left: -50px;
+          height: 40px;
+          width: 40px;
+          border-radius: 50%;
+          padding: 10px;
+          box-sizing: border-box;
+          clip-path: unset;
+          border: 1px solid white;
         }
       }
     </style>
@@ -423,13 +507,15 @@
         class="tooloption"
         onclick="togglesidemunefuctions('sidemenubackgrounds','block')"
       >
-        Backgrounds
+        <img src="Assets/uicomponents/photosvg.svg" alt="" />
+        <p>Theme</p>
       </div>
       <div
         class="tooloption imagetool"
         onclick="togglesidemunefuctions('imagemasks','block')"
       >
-        Add photo
+        <img src="Assets/uicomponents/photosvg.svg" alt="" />
+        <p>Photo</p>
         <input type="file" name="" id="imageselect" />
       </div>
 
@@ -437,15 +523,20 @@
         class="tooloption texttool"
         onclick="togglesidemunefuctions('fontfamilycontainer','block')"
       >
-        Text
+        <img src="Assets/uicomponents/photosvg.svg" alt="" />
+        <p>Text</p>
       </div>
       <div
         class="tooloption"
         onclick="togglesidemunefuctions('imagemasks','block')"
       >
-        Masks
+        <img src="Assets/uicomponents/photosvg.svg" alt="" />
+        <p>Masks</p>
       </div>
-      <div class="tooloption savebutton" onclick="prewiew()">Save</div>
+      <div class="tooloption savebutton" onclick="prewiew()">
+        <img src="Assets/uicomponents/photosvg.svg" alt="" />
+        <p>Save</p>
+      </div>
     </div>
     <div class="selectMenu">
       <span class="selectMenuInOutButton" onclick="togglesidemenuright(this)"
@@ -667,7 +758,7 @@
             item.style.display = "none ";
           });
         }
-        //
+        // mask type
         document
           .querySelectorAll(".maksbuttonscontainer div")
           .forEach((item) => {
@@ -675,6 +766,20 @@
           });
         button.style.backgroundColor = "rgb(70, 70, 70)";
       }
+      // responsivelayout
+      if (window.innerWidth <= 450) {
+        flags.rightSideMenuFlag = true;
+        togglesidemenuright(document.querySelector(".selectMenuInOutButton"));
+      }
+      // resize
+      window.onresize = () => {
+        if (window.innerWidth <= 450) {
+          flags.rightSideMenuFlag = true;
+          togglesidemenuright(document.querySelector(".selectMenuInOutButton"));
+          //
+          document.querySelector(".toolmenu").style.transform = "translate(0)";
+        }
+      };
     </script>
     <!-- background -->
     <script>
@@ -791,7 +896,7 @@
           reader.readAsDataURL(file);
         }
       };
-      // <--- masks --->
+      // <---apply masks --->
       let allmasks = document.querySelectorAll(".mask");
       allmasks.forEach((mask) => {
         mask.onclick = () => {
