--- a/preview.html
+++ b/preview.html
@@ -23,6 +23,20 @@
         min-height: 100dvh;
         font-family: sans-serif;
       }
+      .hideeffectbutton {
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        color: white;
+        cursor: pointer;
+        padding: 10px;
+        background-color: transparent;
+        border-radius: 100px;
+      }
+      .hideeffectbutton:hover {
+        background-color: rgb(0, 170, 255);
+      }
+      /*  */
       .main {
         position: relative;
         width: 60%;
@@ -374,6 +388,135 @@
         }
       }
     </style>
+    <!-- screen effects -->
+    <style>
+      .effectscreenview {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        pointer-events: none;
+        z-index: 60;
+        overflow: hidden;
+      }
+      /* snow1 */
+      .snowflake {
+        position: absolute;
+        height: 20px;
+        aspect-ratio: 1;
+        background-image: radial-gradient(white 0 10%, transparent 60% 100%);
+        border-radius: 50%;
+      }
+      @keyframes fall1 {
+        0% {
+          transform: translateY(-10vh);
+        }
+        100% {
+          transform: translateY(100vh);
+        }
+      }
+      @keyframes fall2 {
+        0% {
+          transform: translateY(-10vh);
+        }
+        100% {
+          transform: translateY(100vh) translateX(300px);
+        }
+      }
+      @keyframes fall3 {
+        0% {
+          transform: translateY(-10vh);
+        }
+        100% {
+          transform: translateY(100vh) translateX(-100px);
+        }
+      }
+      @keyframes fall4 {
+        0% {
+          transform: translateY(-10vh);
+        }
+        100% {
+          transform: translateY(100vh) translateX(100px);
+        }
+      }
+      @keyframes fall5 {
+        0% {
+          transform: translateY(-10vh);
+        }
+        100% {
+          transform: translateY(100vh) translateX(200px);
+        }
+      }
+      /* balloons */
+      .balloon {
+        position: absolute;
+        width: 50px;
+        aspect-ratio: 3/5;
+        background-image: url("Assets/screenoverlays/balloons.gif");
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      /* stars */
+      .stars {
+        position: absolute;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        background-image: url(Assets/screenoverlays/starpng.png);
+        background-size: contain;
+        background-position: center;
+        animation: shine 0.6s infinite alternate ease-in-out;
+      }
+      @keyframes shine {
+        0% {
+          transform: scale(0);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+      /* bubbles1 */
+      .bubble {
+        position: absolute;
+        aspect-ratio: 1;
+        background-image: url(Assets/screenoverlays/bubble.png);
+        background-size: contain;
+        background-position: center;
+      }
+      @keyframes moveup {
+        0% {
+          transform: translateY(120vh);
+        }
+        100% {
+          transform: scale(-20vh);
+        }
+      }
+      /* sakura1 */
+      .sakuracontainer {
+        height: 50px;
+        aspect-ratio: 1;
+        position: absolute;
+      }
+      .sakura {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-image: url(Assets/screenoverlays/sakura1.png);
+        background-position: center;
+        background-size: contain;
+        animation: skew1 2s ease-in-out alternate infinite;
+        transform-origin: 50% 0%;
+      }
+      @keyframes skew1 {
+        0% {
+          transform: rotateX(70deg) rotateY(0deg) rotateZ(0deg);
+        }
+        100% {
+          transform: rotateX(-70deg) rotateY(0deg) rotateZ(-115deg);
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="loading">
@@ -407,6 +550,10 @@
         </div>
       </div>
     </div>
+    <button class="hideeffectbutton" onclick="togglescreeneffect(this)">
+      Hide Effect
+    </button>
+    <div class="effectscreenview"></div>
     <div class="main"></div>
 
     <!-- ui -->
@@ -434,6 +581,19 @@
           document.querySelector(".menu").style.pointerEvents = "none";
           value.style.backgroundImage = 'url("Assets/uicomponents/menu.svg")';
           menuflag = true;
+        }
+      }
+      // toggle screen effect
+      let showscreeneffect = true;
+      function togglescreeneffect(value) {
+        if (showscreeneffect) {
+          document.querySelector(".effectscreenview").style.opacity = "0";
+          value.innerHTML = "Show Effect";
+          showscreeneffect = false;
+        } else {
+          document.querySelector(".effectscreenview").style.opacity = "1";
+          value.innerHTML = "Hide Effect";
+          showscreeneffect = true;
         }
       }
       // share
@@ -525,6 +685,7 @@
             main.appendChild(text);
           });
           fontresize();
+          screeneffect(data[0].seffectnumber);
           //
           setTimeout(() => {
             document.querySelector(".loading").style.display = "none";
@@ -545,6 +706,112 @@
           item.style.fontSize = item.offsetHeight / 4 + "px";
         });
       }
+
+      //
+      window.onresize = fontresize;
+      // screen effect
+      function screeneffect(i) {
+        if (i == 1) {
+          let numberOfelements = 100;
+          timer = setInterval(() => {
+            seffectcreatorfunction(i);
+          }, (15 / numberOfelements) * 1000);
+          timeout = setTimeout(() => {
+            clearTimeout(timer);
+          }, 15000);
+        }
+        // balloon || bubbles
+        if (i == 2 || i == 4) {
+          let numberOfelements = 10;
+          timer = setInterval(() => {
+            seffectcreatorfunction(i);
+          }, (15 / numberOfelements) * 1000);
+          timeout = setTimeout(() => {
+            clearTimeout(timer);
+          }, 15000);
+        }
+        // star
+        if (i == 3) {
+          let numberOfelements;
+          if (window.innerWidth < 450) {
+            numberOfelements = 50;
+          } else {
+            numberOfelements = 100;
+          }
+          timer = setInterval(() => {
+            seffectcreatorfunction(i);
+          }, (15 / numberOfelements) * 1000);
+          timeout = setTimeout(() => {
+            clearTimeout(timer);
+          }, 15000);
+        }
+        // sakura
+        if (i == 5) {
+          let numberOfelements;
+          numberOfelements = 50;
+          timer = setInterval(() => {
+            seffectcreatorfunction(i);
+          }, (15 / numberOfelements) * 1000);
+          timeout = setTimeout(() => {
+            clearTimeout(timer);
+          }, 15000);
+        }
+      }
+      // screen effect creator function
+      function seffectcreatorfunction(value) {
+        const element = document.createElement("div");
+        if (value == 1) {
+          element.className = "snowflake";
+          const startLeft = Math.random() * window.innerWidth;
+          const startAnimationDuration = Math.random() * 5 + 5;
+          element.style.animation =
+            "fall" +
+            Math.floor(Math.random() * 4 + 1) +
+            " " +
+            startAnimationDuration +
+            "s linear infinite";
+          element.style.opacity = Math.random();
+          element.style.height = Math.random() * 15 + 5 + "px";
+          element.style.left = `${startLeft}px`;
+        }
+        // balloons
+        if (value == 2) {
+          element.className = "balloon";
+          element.style.width = Math.random() * 100 + 50 + "px";
+          element.style.left = Math.random() * (window.innerWidth - 100) + "px";
+          element.style.animation =
+            "moveup " + (Math.random() * 4 + 4) + "s infinite ease-in";
+          element.style.filter = "hue-rotate(" + Math.random() * 360 + "deg)";
+        }
+        if (value == 3) {
+          element.className = "stars";
+          element.style.height = Math.random() * 60 + 20 + "px";
+          element.style.left = Math.random() * window.innerWidth + "px";
+          element.style.top = Math.random() * window.innerHeight + "px";
+        }
+        if (value == 4) {
+          element.className = "bubble";
+          element.style.height = Math.random() * 100 + 50 + "px";
+          element.style.left = Math.random() * (window.innerWidth - 100) + "px";
+          element.style.animation =
+            "moveup " + (Math.random() * 4 + 3) + "s infinite ease-in";
+        }
+        if (value == 5) {
+          element.className = "sakuracontainer";
+          element.innerHTML = " <div class='sakura'></div>";
+          element.style.animation =
+            "fall" +
+            Math.floor(Math.random() * 4 + 1) +
+            " " +
+            (Math.random() * 5 + 7) +
+            "s ease-in-out infinite";
+          element.style.opacity = Math.random() * 0.7 + 0.3;
+          element.style.height = Math.random() * 15 + 10 + "px";
+          element.style.left = Math.random() * window.innerWidth + "px";
+        }
+        //
+        document.querySelector(".effectscreenview").appendChild(element);
+      }
       // show alert box
       let alerttimer;
       function showalertbox(value) {
@@ -562,8 +829,6 @@
       function hidealert() {
         document.querySelector(".alert").style.display = "none";
       }
-      //
-      window.onresize = fontresize;
     </script>
   </body>
 </html>
