--- a/preview.html
+++ b/preview.html
@@ -3,7 +3,10 @@
   <head>
     <meta name="title" content="Your Page Title" />
     <meta name="description" content="Your Page Description" />
-    <meta name="image" content="./Assets/Backgrounds/Static/background1.jpg" />
+    <meta
+      name="image"
+      content="https://polidahiya.github.io/Online-Invitation/build/Assets/Backgrounds/Static/background1.jpg"
+    />
     <!--  -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
